# better_erc

./: .gitignore  Cargo.toml  README.md
better_erc/: .gitignore  Cargo.toml  index.html
better_erc/assets/: sw.js
better_erc/src/: app.rs  context.rs  lib.rs  main.rs  main_window.rs  prelude.rs  tabs.rs
better_erc/src/main_window/: default_state.rs  menu_bar.rs  side_panel.rs
better_erc/src/tabs/: nets.rs  pcb_data_import.rs
better_erc/src/windows/: debug.rs
ecad_compare/: Cargo.toml
ecad_compare/examples/: pnp_compare.rs
ecad_compare/src/: lib.rs  pnp.rs
ecad_file_format/: Cargo.toml
ecad_file_format/grammar/: edif.pest  orcad_capture_library_parts.pest  orcad_capture_netlist.pest  orcad_capture_part_list.pest  passive_value.pest  wirelist.pest
ecad_file_format/src/: altium_netlist.rs  csv_util.rs  edif_netlist.rs  kicad_netlist.rs  lib.rs  netlist.rs  orcad_netlist.rs  passive_value.rs  pcb_assembly.rs  pnp.rs  text_util.rs  wirelist.rs
ecad_file_format/test_input/: netlist_altium_edif.edf  netlist_altium_wirelist.net  netlist_kicad.net  pnp_allegro.csv  pnp_altium_no_units.csv  pnp_altium_with_units.csv  pnp_kicad.csv
erc_core/: Cargo.toml  build.rs
erc_core/src/: config.rs  diagnostics.rs  general.rs  i2c.rs  lib.rs  pcba.rs  power.rs  style.rs  util.rs
test_schematics/generate_netlists/: Cargo.toml
test_schematics/generate_netlists/src/: lib.rs  main.rs
test_schematics/sources/: .gitignore  i2c_multiple_pull_ups.kicad_sch  i2c_no_pull_ups.kicad_sch  i2c_non_equal_pull_ups.kicad_sch  i2c_non_standard_pull_ups.kicad_sch  i2c_segments.kicad_sch  test_schematics.kicad_pro  test_schematics.kicad_sch
