[workspace.package]
authors = ["Roman Isaikin <romix.lab@gmail.com>"]
edition = "2024"
version = "0.1.0"
rust-version = "1.86"
include = [
    # "../../Cargo.lock", # So that users can pass `--locked` to `cargo install x`
    "**/*.rs",
    "Cargo.toml",
]

[workspace]
resolver = "3"

members = [
    "better_erc",
    "ecad_compare",
    "ecad_file_format",
    "erc_core",
    "test_schematics/generate_netlists",
]

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
