[package]
name = "better_erc"
authors.workspace = true
edition.workspace = true
version.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
egui = "0.31"
eframe = { version = "0.31", default-features = false, features = [
    #"accesskit", # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow", # Use the glow rendering backend. Alternative: "wgpu".
    "persistence", # Enable restoring app state when restarting the app.
    "wayland", # To support Linux (and CI)
] }
egui-phosphor = { version = "0.9", features = ["fill"] }
egui_tiles = "0.12"
rfd = "0.15"

strum = { version = "0.27", features = ["derive"] }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
tap = "1.0"
tokio = { version = "1.44", features = ["full", "sync"] }

erc_core = { path = "../erc_core" }
ecad_file_format = { path = "../ecad_file_format" }
ecad_compare = { path = "../ecad_compare" }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70" # to access the DOM (to hide the loading text)
