[package]
name = "ecad_file_format"
version = "0.1.0"
edition = "2024"

[dependencies]
pest = "2.7"
pest_derive = { version = "2.7", features = ["grammar-extras"] }
lexpr = { path = "../../lexpr-rs/lexpr" }
serde-lexpr = { path = "../../lexpr-rs/serde-lexpr" }
serde = { version = "1.0", features = ["derive"] }
serde_path_to_error = "0.1"
csv = "1.3"
anyhow = "1"
itertools = "0.14"
human-repr = "1.1"