[package]
name = "ecad_file_format"
authors.workspace = true
edition.workspace = true
version.workspace = true
rust-version.workspace = true
include.workspace = true

[dependencies]
pest = "2.7"
pest_derive = { version = "2.7", features = ["grammar-extras"] }
lexpr = { path = "../../lexpr-rs/lexpr" }
serde-lexpr = { path = "../../lexpr-rs/serde-lexpr" }
serde = { version = "1.0", features = ["derive"] }
serde_path_to_error = "0.1"
csv = "1.3"
anyhow = "1"
itertools = "0.14"
human-repr = "1.1"
regex = "1"
chardetng = "0.1"
encoding_rs = "0.8"