[package]
name = "erc_core"
version = "0.1.0"
edition = "2024"

[dependencies]
ecad_file_format = { path = "../ecad_file_format" }
generate_netlists = { path = "../test_schematics/generate_netlists" }
regex = "1.11"

[build-dependencies]
generate_netlists = { path = "../test_schematics/generate_netlists" }
