[package]
name = "erc_core"
authors.workspace = true
edition.workspace = true
version.workspace = true
rust-version.workspace = true
include.workspace = true

[dependencies]
ecad_file_format = { path = "../ecad_file_format" }
generate_netlists = { path = "../test_schematics/generate_netlists" }
regex = "1.11"

[build-dependencies]
generate_netlists = { path = "../test_schematics/generate_netlists" }
